force-app/main/default/objects/Agent_Action_Log__c/Agent_Action_Log__c.object-meta.xml
<CustomObject>
    <description>Agent / flow action audit trail for demos and support.</description>
    <label>Agent Action Log</label>
    <nameField>
        <displayFormat>AAL-{000000}</displayFormat>
        <label>Agent Action Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>