force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>Flow or agent action API name.</description>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>