force-app/main/default/objects/Agent_Action_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Ties log rows to one conversation or session.</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>