force-app/main/default/objects/Agent_Action_Log__c/fields/Input_Summary__c.field-meta.xml
<CustomField>
    <fullName>Input_Summary__c</fullName>
    <description>Redacted or high-level inputs for audit demo.</description>
    <label>Input Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>