force-app/main/default/objects/Agent_Action_Log__c/fields/Related_Clinical_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Related_Clinical_Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional affected clinical encounter.</description>
    <label>Related Clinical Encounter</label>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipLabel>Agent Action Logs</relationshipLabel>
    <relationshipName>Agent_Action_Logs_From_Encounter</relationshipName>
    <type>Lookup</type>
</CustomField>