force-app/main/default/objects/Agent_Action_Log__c/fields/Related_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Related_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional affected service appointment.</description>
    <label>Related Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Agent Action Logs</relationshipLabel>
    <relationshipName>Agent_Action_Logs_From_SA</relationshipName>
    <type>Lookup</type>
</CustomField>